--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="./img/logo.png"></a>
+      <a class="navbar-brand" href="#"><img src="https://png.pngtree.com/png-vector/20191018/ourmid/pngtree-tree-logo-design-png-image_1824170.jpg" width="100"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -37,9 +37,28 @@
       </div>
     </div>
   </nav> <!-- End of Nav -->
-<h1>About Page</h1>
-
-
+<h1 class="bottom">About Me</h1>
+<div>
+<img class="tree" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTSSPYj4Nyblm4aeAfDK_1qAMYmLbCgs04loQ&usqp=CAU" width="1000">
+</div>
+<div class="about">
+  <h1>Hi my name is Andrew Rasberry. I enjoy climbing trees and hanging off branches high off the ground. </h1>
+</div>
+<style>
+  .footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: rgb(42, 197, 28);
+    color: white;
+    text-align: center;
+  }
+  </style>
+  
+  <div class="footer">
+    <p>welcome to my website</p>
+  </div>
 </body>
 
 </html>
