--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="./img/logo.png"></a>
+      <a class="navbar-brand" href="#"><img src="https://png.pngtree.com/png-vector/20191018/ourmid/pngtree-tree-logo-design-png-image_1824170.jpg" width="100"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -61,7 +61,7 @@
         <img src="https://th.bing.com/th/id/OIP.wnzRul70EVK8842rmgh9nAHaEo?w=266&h=180&c=7&o=5&pid=1.7" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="https://th.bing.com/th/id/OIP.O4Kiw2athTUCYOilJVLTbQHaEo?w=266&h=180&c=7&o=5&pid=1.7" alt="...">
+        <img src="https://th.bing.com/th/id/OIP.O4Kiw2athTUCYOilJVLTbQHaEo?w=266&h=180&c=7&o=5&pid=1.7" class="d-block w-100" alt="...">
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -77,7 +77,21 @@
   </div>
   <!-- End of Image Slider -->
 
-
+  <style>
+    .footer {
+      position: fixed;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      background-color: rgb(42, 197, 28);
+      color: white;
+      text-align: center;
+    }
+    </style>
+    
+    <div class="footer">
+      <p>welcome to my website</p>
+    </div>
 </body>
 
 </html>
