--- a/contact.html
+++ b/contact.html
@@ -77,6 +77,7 @@
   
   <div class="footer">
     <p>welcome to my website</p>
+    <a href="https://rasberry300.github.io/Coding-1-Final/">link to pages</a>
   </div>
 </body>
 
